[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hitl-mcp-server"
version = "0.2.0"
description = "Minimal Human-in-the-Loop MCP Server — multiline input only"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=2.8.1",
]

[project.scripts]
hitl-mcp-server = "human_loop_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["human_loop_server.py"]
